--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shvedovillia.github.io/tournament/",
+  "homepage": "https://shvedovillia.github.io/tournament",
   "name": "tournament",
   "version": "0.1.0",
   "private": true,
