--- a/package.json
+++ b/package.json
@@ -37,14 +37,16 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^4.4.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/i18next": "^13.0.0",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-i18next": "^8.1.0",
+    "@types/styled-components": "^4.4.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
