--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/history": "^4.7.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux-seamless-immutable": "^0.4.0",
+    "connected-react-router": "^6.7.0",
+    "history": "^4.10.1",
     "i18next": "^19.0.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.7",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
+    "redux-seamless-immutable": "^0.4.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.4.1"
   },
@@ -19,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint --fix -p tsconfig.json -c tslint.json"
   },
   "eslintConfig": {
     "extends": "react-app"
