--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/history": "^4.7.5",
-    "@types/react-redux": "^7.1.7",
-    "@types/redux-seamless-immutable": "^0.4.0",
+    "@rebass/grid": "^6.1.0",
+    "color": "^3.1.2",
     "connected-react-router": "^6.7.0",
+    "formik": "^2.1.4",
     "history": "^4.10.1",
-    "i18next": "^19.0.2",
+    "i18next": "^19.3.2",
     "moment": "^2.24.0",
+    "ramda": "^0.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-i18next": "^11.2.7",
+    "react-i18next": "^11.2.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
@@ -22,6 +23,7 @@
     "redux-seamless-immutable": "^0.4.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^4.4.1"
   },
   "scripts": {
@@ -35,6 +37,13 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "prettier --write",
+      "npm run lint",
+      "git add"
+    ]
   },
   "browserslist": {
     "production": [
@@ -52,12 +61,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/color": "^3.0.1",
+    "@types/ramda": "^0.26.42",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/history": "^4.7.5",
     "@types/i18next": "^13.0.0",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-i18next": "^8.1.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux-seamless-immutable": "^0.4.0",
     "@types/styled-components": "^4.4.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
